Prevent text from overflowing

--- a/app/ui/contact-list/contact-list-item/styles.module.css
+++ b/app/ui/contact-list/contact-list-item/styles.module.css
@@ -3,6 +3,7 @@
   border-radius: 8px;
   padding: 1rem 1.25rem;
   line-height: 1.5;
+  overflow-wrap: break-word;
 }
 
 .name {
